fix: Fix collapsed month picker with sidebar (fixes #253)

--- a/src/VueDatePicker/style/components/_Calendar.scss
+++ b/src/VueDatePicker/style/components/_Calendar.scss
@@ -253,6 +253,7 @@
 
 .dp__instance_calendar {
   position: relative;
+  width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
